--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <td>⭐️⭐️⭐️</td>
     </tr>
     <tr>
-      <td>Phoyoshop</td>
+      <td>Photoshop</td>
       <td>⭐️⭐️⭐️⭐️⭐️</td>
 
     </tr>
